<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/mahasiswa"
        android:textSize="25sp"
        android:textAlignment="center"
        android:background="@color/colorPrimary"
        android:textColor="@color/putih"
        android:layout_marginTop="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp">
        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/foto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/fotoku"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="8dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nama"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nim"/>
        </LinearLayout>
    </LinearLayout>

    <TextView
        android:background="@color/colorPrimary"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/kartu_hasil_studi"
        android:textColor="@color/putih"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_margin="8dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvEntry"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="5dp"
            app:cardBackgroundColor="@color/putih"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:focusable="true"
            android:layout_margin="5dp"
            android:onClick="pindahEntry">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/entry"
                    android:contentDescription="@string/entry" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entry"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvTampil"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="5dp"
            app:cardBackgroundColor="@color/putih"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:focusable="true"
            android:layout_margin="5dp"
            android:onClick="pindahTampil">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/tampil"
                    android:contentDescription="@string/tampil" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/tampil"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvCetak"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="5dp"
            app:cardBackgroundColor="@color/putih"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:focusable="true"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/cetak"
                    android:contentDescription="@string/cetak" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/cetak"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvLaporan"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="5dp"
            app:cardBackgroundColor="@color/putih"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:focusable="true"
            android:layout_margin="5dp">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/laporan"
                    android:contentDescription="@string/laporan" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/laporan"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="10dp">

        <androidx.cardview.widget.CardView
            android:id="@+id/cvAbout"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="5dp"
            app:cardBackgroundColor="@color/putih"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:focusable="true"
            android:layout_margin="5dp"
            android:onClick="pindahAbout">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/about"
                    android:contentDescription="@string/about" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/about"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:id="@+id/cvExit"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:padding="5dp"
            app:cardBackgroundColor="@color/putih"
            app:cardCornerRadius="20dp"
            android:clickable="true"
            android:foreground="?attr/selectableItemBackground"
            android:focusable="true"
            android:layout_margin="5dp"
            android:onClick="pindahExit">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <ImageView
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:src="@drawable/exit"
                    android:contentDescription="@string/log_out" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/log_out"
                    android:layout_gravity="center"/>
            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/fakultas_ilmu_komputer"
        android:textColor="@color/putih"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:text="@string/teknik_informatika"
        android:textColor="@color/putih"
        android:textAlignment="center"
        android:textSize="20sp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"/>

</LinearLayout>